--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,6 +22,8 @@ bodyClass: page-home
   </div>
 </div>
 
+{% include shop.html %}
+
 <div class="strip">
   <div class="container pt-6 pb-6 pb-md-10">
     <div class="row justify-content-start">
