--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,5 @@
 ---
-title: Jekyll Serif - Jekyll Small Business Theme
+title: Má Bakery - Craft Cannabis Cookies and Confections
 layout: default
 bodyClass: page-home
 ---
@@ -21,8 +21,6 @@ bodyClass: page-home
     </div>
   </div>
 </div>
-
-{% include shop.html %}
 
 <div class="strip">
   <div class="container pt-6 pb-6 pb-md-10">
