Fix Image URL and dynamic year in copyright text

--- a/_includes/sub-footer.html
+++ b/_includes/sub-footer.html
@@ -7,7 +7,8 @@
             {% include social.html %}
           {% endif %}
           {% if site.footer.copyright_text %}
-          <div class="copyright">{{ site.footer.copyright_text }}</div>
+          {% assign current_year = { site.time | date: '%y' } %}
+          <div class="copyright">{{ site.footer.copyright_text | replace: "!YEAR!", current_year }}</div>
           {% endif %}
         </div>
       </div>
