--- a/_layouts/shop.html
+++ b/_layouts/shop.html
@@ -5,7 +5,7 @@ bodyClass: page-shop
 
 <div class="container pb-6 pt-6 pt-md-10 pb-md-10">
   <div class="row justify-content-start">
-    <div class="col-12 col-md-8">
+    <div class="col-12">
       {% include shop.html %}
     </div>
   </div>
